--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>STM32-RN2483-LoRa-Node</name>
+	<name>EFM32-RN2483-LoRa-Node</name>
 	<comment></comment>
 	<projects>
 	</projects>
