--- a/.project
+++ b/.project
@@ -21,37 +21,52 @@
 		<link>
 			<name>Drivers/i2cspm.c</name>
 			<type>1</type>
-			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.0/hardware/kit/common/drivers/i2cspm.c</location>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/hardware/kit/common/drivers/i2cspm.c</location>
+		</link>
+		<link>
+			<name>Drivers/rtcdriver.c</name>
+			<type>1</type>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emdrv/rtcdrv/src/rtcdriver.c</location>
 		</link>
 		<link>
 			<name>emlib/em_cmu.c</name>
 			<type>1</type>
-			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.0/platform/emlib/src/em_cmu.c</location>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_cmu.c</location>
+		</link>
+		<link>
+			<name>emlib/em_core.c</name>
+			<type>1</type>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_core.c</location>
 		</link>
 		<link>
 			<name>emlib/em_emu.c</name>
 			<type>1</type>
-			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.0/platform/emlib/src/em_emu.c</location>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_emu.c</location>
 		</link>
 		<link>
 			<name>emlib/em_gpio.c</name>
 			<type>1</type>
-			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.0/platform/emlib/src/em_gpio.c</location>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_gpio.c</location>
 		</link>
 		<link>
 			<name>emlib/em_i2c.c</name>
 			<type>1</type>
-			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.0/platform/emlib/src/em_i2c.c</location>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_i2c.c</location>
+		</link>
+		<link>
+			<name>emlib/em_rtc.c</name>
+			<type>1</type>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_rtc.c</location>
 		</link>
 		<link>
 			<name>emlib/em_system.c</name>
 			<type>1</type>
-			<locationURI>STUDIO_SDK_LOC/platform/emlib/src/em_system.c</locationURI>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_system.c</location>
 		</link>
 		<link>
 			<name>emlib/em_usart.c</name>
 			<type>1</type>
-			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.0/platform/emlib/src/em_usart.c</location>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_usart.c</location>
 		</link>
 		<link>
 			<name>CMSIS/EFM32HG/startup_gcc_efm32hg.s</name>
