--- a/.project
+++ b/.project
@@ -19,6 +19,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>Drivers/dmactrl.c</name>
+			<type>1</type>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/hardware/kit/common/drivers/dmactrl.c</location>
+		</link>
+		<link>
 			<name>Drivers/i2cspm.c</name>
 			<type>1</type>
 			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/hardware/kit/common/drivers/i2cspm.c</location>
@@ -39,6 +44,11 @@
 			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_core.c</location>
 		</link>
 		<link>
+			<name>emlib/em_dma.c</name>
+			<type>1</type>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_dma.c</location>
+		</link>
+		<link>
 			<name>emlib/em_emu.c</name>
 			<type>1</type>
 			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_emu.c</location>
@@ -52,6 +62,11 @@
 			<name>emlib/em_i2c.c</name>
 			<type>1</type>
 			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_i2c.c</location>
+		</link>
+		<link>
+			<name>emlib/em_leuart.c</name>
+			<type>1</type>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_leuart.c</location>
 		</link>
 		<link>
 			<name>emlib/em_rtc.c</name>
