--- a/.project
+++ b/.project
@@ -34,6 +34,11 @@
 			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emdrv/rtcdrv/src/rtcdriver.c</location>
 		</link>
 		<link>
+			<name>emlib/em_adc.c</name>
+			<type>1</type>
+			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_adc.c</location>
+		</link>
+		<link>
 			<name>emlib/em_cmu.c</name>
 			<type>1</type>
 			<location>C:/SiliconLabs/SimplicityStudio/v4/developer/sdks/gecko_sdk_suite/v2.1/platform/emlib/src/em_cmu.c</location>
